<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/memberMenuTasks"
        android:icon="@drawable/baseline_people_alt_24"
        android:title="@string/members" />
    <item
        android:id="@+id/editMenuTasks"
        android:icon="@drawable/baseline_edit_document_24"
        android:title="@string/edit_board" />
    <item
        android:id="@+id/deleteMenuTasks"
        android:icon="@drawable/baseline_delete_24"
        android:title="@string/delete_board" />
    <item
        android:id="@+id/searchTasksMenu"
        android:icon="@drawable/baseline_search_24"
        app:showAsAction="ifRoom"
        android:title="@string/search" />

</menu>