<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/editNoteHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/edit_note"
                android:textColor="@color/dark_orchid"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/deleteNoteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/outline_color"
                android:text="@string/delete"
                android:textColor="@color/dark_orchid"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/saveNoteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/primary_color"
                android:text="@string/save"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/deleteNoteButton"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <EditText
            android:id="@+id/editNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints="username"
            android:hint="@string/enter_the_title"
            android:padding="12dp"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:layout_below="@id/editNoteHeading"
            android:background="@drawable/outline_box"
            android:layout_marginTop="16dp"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/editNoteDesc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="username"
            android:hint="@string/enter_the_description"
            android:gravity="top"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textSize="18sp"
            android:background="@drawable/outline_box"
            android:layout_below="@id/editNoteTitle"
            android:layout_marginTop="12dp" />

    </RelativeLayout>
</layout>