<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".cards.CardsDetailsFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/cardDetailsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_name_card_details"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:hint="@string/Name"
                        android:inputType="text"
                        android:background="@color/white"
                        android:textSize="18sp"
                        tools:text="Test" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_color"
                    android:textColor="@color/orchid"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_select_label_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:text="@string/select_color"
                    android:textColor="@color/dark_orchid" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/members"
                    android:textColor="@color/orchid"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_select_members"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:text="@string/select_members"
                    android:textColor="@color/dark_orchid" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_selected_members_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:visibility="gone"
                    tools:visibility="visible"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/duedate"
                    android:textColor="@color/orchid"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_select_due_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="10dp"
                    android:text="@string/select_due_date"
                    android:textSize="18sp"
                    android:textColor="@color/dark_orchid" />

                <Button
                    android:id="@+id/btn_update_card_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/primary_color"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/update"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/cardsDetailsProgressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>

</layout>

